fix adsense alignment

--- a/css/main.css
+++ b/css/main.css
@@ -409,21 +409,9 @@ a:visited { color: #205caa; }
 
 }
 
-.ads {
-	margin-right: auto;
-	margin-left: auto;
-	display: none;
-	@media @large {
-		display: block;
-		float: right;
-		width: 160px;
-		margin-left: 80px;
-		padding: 0;
-	}
-}
-
 .google-ads {
-	text-align: right;
-	margin-top: 40px;
+	text-align: center;
+	margin-top: 15px;
+    margin-bottom: 15px;
 }
 
